--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
++ @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800;900&display=swap');
++ 
 /* Reset and Base Styles */
 * {
     margin: 0;
